# Data-Structures-Algorithms

./: .pre-commit-config.yaml  CONTRIBUTING.md  FINAL_COMPLETION_REPORT.md  PROJECT_STATUS_FINAL.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
01 Unscramble Computer Science Problems/submit/: Analysis.txt  Task0.py  Task1.py  Task2.py  Task4.py
02 Show Me The Data Structures/single/: explanation_1.txt  explanation_2.txt  explanation_3.txt  explanation_5.txt  explanation_6.txt  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py
03 Problems vs. Algorithms/single/: explanation_1.txt  explanation_2.txt  explanation_3.txt  explanation_4.txt  explanation_5.txt  explanation_6.txt  explanation_7.txt  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py
04 Route Planner/: .workspace-submit.json
04 Route Planner/home/: project_notebook.ipynb
notebooks/: performance_analysis.ipynb
sample_data/: calls.csv  texts.csv
scripts/: dev_tools.py
src/: enhanced_file_finder.py  enhanced_lru_cache.py  enhanced_problem3.py  enhanced_problem4.py  enhanced_task2.py  enhanced_task3.py  enhanced_task4.py
tests/: integration_test.py  test_comprehensive.py
